// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PhraseCloud Minimum config ( phrases ) 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          PhraseCloud
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          Minimum config ( phrases )
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <svg
          height={200}
          width={250}
        />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderTop": "1px solid #eee",
            "margin": "20px 0 0 0",
          }
        }
      >
        <div>
          <p>
            Word clouds have been a staple of big data visualization for some time, NRC recommendation algorithms however leverage more than just single words, but phrases.  This component can be used to visualize these phrases to end users.
          </p>
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            PhraseCloudSquare
            " Component
          </h2>
          <table
            className="css-1ytzlk7"
          >
            <thead>
              <tr>
                <th
                  className="css-d52hbj"
                >
                  property
                </th>
                <th
                  className="css-d52hbj"
                >
                  propType
                </th>
                <th
                  className="css-d52hbj"
                >
                  required
                </th>
                <th
                  className="css-d52hbj"
                >
                  default
                </th>
                <th
                  className="css-d52hbj"
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  width
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    number
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    250
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Width of underlying svg element
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  height
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    number
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    200
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Height of underlying svg element
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  maxFontSize
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    number
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    18
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  The font size of the most important phrase
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  minFontSize
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    number
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    4
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  The font size of the least important phrase
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  placement
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    'supernova'
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Placement algorithm to use (will most likely be deprecated)
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  phrases
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    <span>
                      [
                    </span>
                    <span>
                      <span>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          {
                        </button>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                        >
                          ...
                        </button>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            text
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            size
                            
                            :
                             
                          </span>
                          <span>
                            number
                          </span>
                          ,
                        </div>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          }
                        </button>
                      </span>
                    </span>
                    <span>
                      ]
                    </span>
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  yes
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  Array of { text, size } objects to draw
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  fontFamily
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    'courier new'
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span>
                     
                    Font family to use when drawing phrases.  "Alfa Slab One" works well,
                  </span>
                  <span>
                    <br />
                     
                    but make sure to include it in your application and set \`waitForFontFace\`
                  </span>
                  <span>
                    <br />
                     
                    to \`true\`.
                  </span>
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  fallbackFontFamily
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    'courier'
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span>
                     
                    If the specified font family is external and cannot be loaded, fallback
                  </span>
                  <span>
                    <br />
                     
                    this font instead
                  </span>
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  waitForFontFace
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    bool
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    false
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span>
                     
                    Use font-face-observer to wait for fonts to be available.  This is
                  </span>
                  <span>
                    <br />
                     
                    necessary because computations regarding character size will be affected
                  </span>
                  <span>
                    <br />
                     
                    by the missing font.
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PhraseCloud fontFamily="Alfa Slab One" and waitForFontFace=true 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          PhraseCloud
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          fontFamily="Alfa Slab One" and waitForFontFace=true
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <svg
          height={200}
          width={250}
        />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderTop": "1px solid #eee",
            "margin": "20px 0 0 0",
          }
        }
      >
        <div>
          <p>
            Word clouds have been a staple of big data visualization for some time, NRC recommendation algorithms however leverage more than just single words, but phrases.  This component can be used to visualize these phrases to end users.
          </p>
        </div>
      </div>
      <div>
        <h1
          style={
            Object {
              "borderBottom": "1px solid #EEE",
              "fontSize": "25px",
              "margin": "20px 0 0 0",
              "padding": "0 0 5px 0",
            }
          }
        >
          Prop Types
        </h1>
        <div>
          <h2
            style={
              Object {
                "margin": "20px 0 0 0",
              }
            }
          >
            "
            PhraseCloudSquare
            " Component
          </h2>
          <table
            className="css-1ytzlk7"
          >
            <thead>
              <tr>
                <th
                  className="css-d52hbj"
                >
                  property
                </th>
                <th
                  className="css-d52hbj"
                >
                  propType
                </th>
                <th
                  className="css-d52hbj"
                >
                  required
                </th>
                <th
                  className="css-d52hbj"
                >
                  default
                </th>
                <th
                  className="css-d52hbj"
                >
                  description
                </th>
              </tr>
            </thead>
            <tbody>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  width
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    number
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    250
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Width of underlying svg element
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  height
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    number
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    200
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Height of underlying svg element
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  maxFontSize
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    number
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    18
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  The font size of the most important phrase
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  minFontSize
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    number
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    4
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  The font size of the least important phrase
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  placement
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    'supernova'
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  Placement algorithm to use (will most likely be deprecated)
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  phrases
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    <span>
                      [
                    </span>
                    <span>
                      <span>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          {
                        </button>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                        >
                          ...
                        </button>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            text
                            
                            :
                             
                          </span>
                          <span>
                            string
                          </span>
                          ,
                        </div>
                        <div
                          style={
                            Object {
                              "marginLeft": 15,
                            }
                          }
                        >
                          <span
                            style={
                              Object {
                                "whiteSpace": "nowrap",
                              }
                            }
                          >
                            size
                            
                            :
                             
                          </span>
                          <span>
                            number
                          </span>
                          ,
                        </div>
                        <button
                          className="css-5gtpmt"
                          onClick={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                        >
                          }
                        </button>
                      </span>
                    </span>
                    <span>
                      ]
                    </span>
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  yes
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  Array of { text, size } objects to draw
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  fontFamily
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    'courier new'
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span>
                     
                    Font family to use when drawing phrases.  "Alfa Slab One" works well,
                  </span>
                  <span>
                    <br />
                     
                    but make sure to include it in your application and set \`waitForFontFace\`
                  </span>
                  <span>
                    <br />
                     
                    to \`true\`.
                  </span>
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  fallbackFontFamily
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    string
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    'courier'
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span>
                     
                    If the specified font family is external and cannot be loaded, fallback
                  </span>
                  <span>
                    <br />
                     
                    this font instead
                  </span>
                </td>
              </tr>
              <tr>
                <td
                  className="css-1ygfcef"
                >
                  waitForFontFace
                </td>
                <td
                  className="css-1ygfcef"
                >
                  <span>
                    bool
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  -
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span
                    style={
                      Object {
                        "color": "#22a",
                        "wordBreak": "break-word",
                      }
                    }
                  >
                    false
                  </span>
                </td>
                <td
                  className="css-d52hbj"
                >
                  <span>
                     
                    Use font-face-observer to wait for fonts to be available.  This is
                  </span>
                  <span>
                    <br />
                     
                    necessary because computations regarding character size will be affected
                  </span>
                  <span>
                    <br />
                     
                    by the missing font.
                  </span>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PhraseCloud with height=50 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          PhraseCloud
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with height=50
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <svg
          height={50}
          width={250}
        />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots PhraseCloud with height=150 and width=750 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          PhraseCloud
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with height=150 and width=750
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <svg
          height={150}
          width={750}
        />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots PhraseCloud with maxFontSize=30 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          PhraseCloud
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with maxFontSize=30
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <svg
          height={200}
          width={250}
        />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots PhraseCloud with minFontSize=15 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          PhraseCloud
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with minFontSize=15
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <svg
          height={200}
          width={250}
        />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots PhraseCloud with minFontSize=15 and maxFontSize=30 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          PhraseCloud
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with minFontSize=15 and maxFontSize=30
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <svg
          height={200}
          width={250}
        />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots PhraseCloud with placement=grid 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          PhraseCloud
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with placement=grid
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <svg
          height={200}
          width={250}
        />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots PhraseCloud with placement=onion 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          PhraseCloud
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with placement=onion
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <svg
          height={200}
          width={250}
        />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots PhraseCloud with placement=random 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          PhraseCloud
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with placement=random
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <svg
          height={200}
          width={250}
        />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
    </div>
  </div>
</div>
`;

exports[`Storyshots PhraseCloud with width=150 1`] = `
<div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      <div
        style={
          Object {
            "borderBottom": "1px solid #eee",
            "marginBottom": 10,
            "paddingTop": 10,
          }
        }
      >
        <h1
          style={
            Object {
              "fontSize": "35px",
              "margin": 0,
              "padding": 0,
            }
          }
        >
          PhraseCloud
        </h1>
        <h2
          style={
            Object {
              "fontSize": "22px",
              "fontWeight": 400,
              "margin": "0 0 10px 0",
              "padding": 0,
            }
          }
        >
          with width=150
        </h2>
      </div>
    </div>
  </div>
  <div
    style={Object {}}
  >
    <div
      style={
        Object {
          "margin": "20px",
        }
      }
    >
      <div
        style={
          Object {
            "textAlign": "center",
          }
        }
      >
        <svg
          height={200}
          width={150}
        />
      </div>
    </div>
  </div>
  <div
    style={undefined}
  >
    <div
      style={
        Object {
          "WebkitFontSmoothing": "antialiased",
          "backgroundColor": "#fff",
          "border": "1px solid #eee",
          "borderRadius": "2px",
          "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
          "color": "#444",
          "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
          "fontSize": "15px",
          "fontWeight": 300,
          "lineHeight": 1.45,
          "marginBottom": "20px",
          "marginTop": "20px",
          "padding": "20px 40px 40px",
        }
      }
    >
      
    </div>
  </div>
</div>
`;
